<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#1abc9c">

    <TextView
        android:id="@+id/biodata"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Biodata"
        android:layout_centerHorizontal="true"
        android:textColor="#d1ccc0"
        android:textSize="28sp"
        android:fontFamily="sans-serif-condensed" />

    <ImageView
        android:id="@+id/profile"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/biodata"
        android:src="@drawable/nur" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="450dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="210dp"
        android:background="#16a085"
        android:orientation="vertical"
        android:padding="20dp"

        android:id="@+id/relativeLayout">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="5dp">

                <TextView
                    android:id="@+id/nama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:padding="10dp"
                    android:text="@string/nama_lengkap_noerkhalidah_miskiyah"
                    android:textColor="#d1ccc0"
                    android:textSize="18dp" />


                <TextView
                    android:id="@+id/nim"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:padding="10dp"
                    android:text="@string/nim_10118077"
                    android:textColor="#d1ccc0"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/kelas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:padding="10dp"
                    android:text="@string/kelas_if_2"
                    android:textColor="#d1ccc0"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/jeniskelamin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:padding="10dp"
                    android:text="@string/jenis_kelamin_perempuan"
                    android:textColor="#d1ccc0"
                    android:textSize="18dp" />


                <TextView
                    android:id="@+id/ttl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:padding="10dp"
                    android:text="@string/ttl_sukabumi_9_april_2000"
                    android:textColor="#d1ccc0"
                    android:textSize="18dp" />


                <TextView
                    android:id="@+id/alamat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:padding="10dp"
                    android:text="@string/alamat_rumah_jl_cijerah_no.207"
                    android:textColor="#d1ccc0"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/goldarah"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:padding="10dp"
                    android:text="@string/goldar_o"
                    android:textColor="#d1ccc0"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/makanan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:padding="10dp"
                    android:text="@string/makfav_nasi_goreng"
                    android:textColor="#d1ccc0"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/minuman"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:padding="10dp"
                    android:text="@string/minfav_juice"
                    android:textColor="#d1ccc0"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/hobi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:padding="10dp"
                    android:text="@string/hobi_jalan_jalan"
                    android:textColor="#d1ccc0"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/lagu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:padding="10dp"
                    android:text="@string/lagu_favorit_to_the_bone_pamungkas"
                    android:textColor="#d1ccc0"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/film"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:padding="10dp"
                    android:text="@string/film_favorit_drama_korea"
                    android:textColor="#d1ccc0"
                    android:textSize="18dp" />


                <TextView
                    android:id="@+id/pekerjaan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:padding="10dp"
                    android:text="@string/perkerjaan_yang_diinginkan_setelah_kuliah_guru_atau_dosen"
                    android:textColor="#d1ccc0"
                    android:textSize="18dp" />


            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</RelativeLayout>